--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <button onclick="showPoster()">Подарок 🎁</button>
 
     <div id="poster" class="poster-container">
-      <img src="poster.jpg" alt="Подарочный постер">
+      <img src="poster.PNG" alt="Подарочный постер">
     </div>
 
     <footer>С любовью, Пух</footer>
